# projeto-end-to-end

./: .gitignore  docker-compose.yml  main.py  pyproject.toml  readme.md
data/: dados-aptos.csv  links-aptos_old.csv
extract/: extract.py  testes.py
load/: load.py
tests/: Teste_postgresql.ipynb  Teste_pyspark.ipynb
